# audio_streamer

./: .gitignore  README.md  clean.sh  run.sh
client/: CMakeLists.txt  main.cpp  run.sh  streamerclient.cpp  streamerclient.hpp  wavchunkdata.hpp  wavplayer.cpp  wavplayer.hpp
lib/: fileinputstream.cpp  fileinputstream.hpp  fileoutputstream.cpp  fileoutputstream.hpp  memoryinputstream.cpp  memoryinputstream.hpp  memoryoutputstream.cpp  memoryoutputstream.hpp  socketaddress.cpp  socketaddress.hpp  songinfo.hpp  songrequest.hpp  tcpmessage.hpp  tcpsocket.cpp  tcpsocket.hpp  types.hpp
server/: CMakeLists.txt  directoryinfo.cpp  directoryinfo.hpp  main.cpp  run.sh  streamserver.cpp  streamserver.hpp  tcpclient.cpp  tcpclient.hpp  tcpserver.cpp  tcpserver.hpp  wavfile.cpp  wavfile.hpp
